Agrega botón reiniciar y mejora el resultado del sorteo

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
             <ul id="resultado" class="result-list" aria-live="polite"></ul>
 
             <div class="button-container">
-                <button class="button-draw" id="sortear" onclick="sortearAmigo()" aria-label="Sortear amigo secreto" disabled>
+                <button class="button-draw" id="sortear" onclick="sortearAmigo()" aria-label="Sortear amigo secreto">
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
+                </button>
+                <button class="button-restart" id="reiniciar" onclick="reiniciar()" aria-label="Reiniciar Amigo Secreto" disabled>
+                    Reiniciar sorteo
                 </button>
             </div>
         </section>
